--- a/lsc_intro/package.xml
+++ b/lsc_intro/package.xml
@@ -13,7 +13,8 @@
   <test_depend>python3-pytest</test_depend>
 
   <exec_depend>vision_opencv</exec_depend>
-  <exec_depend>numpy</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
+  <exec_depend>python3-ultralytics-pip</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
