--- a/tasks/rosdep.yml
+++ b/tasks/rosdep.yml
@@ -15,4 +15,4 @@
 - name: Install ros native dependencies
   shell: rosdep install --from-paths src --ignore-src -r -y
   args:
-    chdir: "~/{{ robot_name }}_ws"
+    chdir: "~/{{ ws_name }}"
