add key to source list

--- a/local.yml
+++ b/local.yml
@@ -3,7 +3,7 @@
     ros2_gpg_key_url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.key
     ros2_repository_url: http://packages.ros.org/ros2/ubuntu
     ros2_distro: humble
-    robot_name: rosbot
+    robot_name: skratch
     ws_name: lsc_ws
   pre_tasks:
     - name: Apt update
