--- a/lsc_bringup/package.xml
+++ b/lsc_bringup/package.xml
@@ -13,8 +13,8 @@
   <exec_depend>launch_ros</exec_depend>
   <exec_depend>xacro</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
-
-  <exec_depend>ros_components_description</exec_depend>
+  <exec_depend>ros2_control</exec_depend>
+  <exec_depend>ros2_controllers</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
