--- a/tasks/env.yml
+++ b/tasks/env.yml
@@ -8,6 +8,17 @@
     - 'export ROBOT_NAME="{{ robot_name }}"'
   notify:
     - Reload ~/.bashrc
+- name: Set aliases
+  lineinfile:
+    path: "{{ lookup('env', 'HOME') }}/.bashrc"
+    create: yes
+    line: "{{ item }}"
+    state: present
+  with_items:
+    - alias lss_dir="cd ~/{{ ws_name }}/src/lacoro-2024-ros-workshop"
+    - alias lss_update="cd ~/{{ ws_name }}/src/lacoro-2024-ros-workshop && git pull && ansible-playbook local.yml --ask-become -t developer"
+  notify:
+    - Reload ~/.bashrc
 - name: Add header information
   lineinfile:
     path: "{{ lookup('env', 'HOME') }}/.bashrc"
