--- a/tasks/env.yml
+++ b/tasks/env.yml
@@ -26,6 +26,7 @@
     create: yes
     state: present
   with_items:
+    - 'source /opt/ros/{{ ros2_distro }}/setup.bash'
     - 'echo "------------------------------------------"'
     - 'echo "LACORO Summer School 20204 - ROS Workshop"'
     - 'echo "-------------------------------------------"'
