set origin main

--- a/tasks/env.yml
+++ b/tasks/env.yml
@@ -16,7 +16,7 @@
     state: present
   with_items:
     - alias lss_dir="cd ~/{{ ws_name }}/src/lacoro-2024-ros-workshop"
-    - alias lss_update="cd ~/{{ ws_name }}/src/lacoro-2024-ros-workshop && git pull && ansible-playbook local.yml --ask-become -t developer"
+    - alias lss_update="cd ~/{{ ws_name }}/src/lacoro-2024-ros-workshop && git pull origin main && ansible-playbook local.yml --ask-become -t developer"
   notify:
     - Reload ~/.bashrc
 - name: Add header information
